flex-wrap-fixed

--- a/formcontatti/style.css
+++ b/formcontatti/style.css
@@ -279,6 +279,7 @@ textarea{
 .input_2{
     width: 100%;
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
